[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "rembish_org"
version = "0.8.0"
description = "Personal website"
authors = [ "Alex Rembish <alex@rembish.org>",]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.1.2"
uWSGI = "^2.0.20"
markdown2 = "^2.4.3"
Flask-WTF = "^1.0.1"
requests = "^2.28.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Security = "^3.0.0"
Flask-Dance = "^6.0.0"
email-validator = "^1.2.1"
SQLAlchemy-Utils = "^0.38.2"
PyMySQL = "^1.0.2"
bcrypt = "^3.2.2"
SQLAlchemy = "^1.4.0"
cryptography = "^37.0.3"
MarkupSafe = "<2.1"
Werkzeug = "<2.1"
Jinja2 = "<3.0.1"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.20.0"
pyOpenSSL = "^22.0.0"
Flask-DebugToolbar = "^0.13.1"
docker-compose = "^1.29.2"
semver = "^2.13.0"
toml = "^0.10.2"
Flask-Migrate = "^3.1.0"
flask-shell-ipython = "^0.4.1"
