[project]
name = "rembish-org-backend"
version = "0.32.0"
description = "rembish.org API backend"
requires-python = ">=3.12"
dependencies = [
    "aiomysql>=0.2.0",
    "alembic>=1.13.0",
    "cachetools>=5.3.0",
    "anthropic>=0.45.0",
    "authlib>=1.3.0",
    "cryptography>=42.0.0",
    "email-validator>=2.0.0",
    "fastapi>=0.115.0",
    "google-cloud-storage>=2.10.0",
    "httpx>=0.27.0",
    "icalendar>=6.0.0",
    "itsdangerous>=2.1.0",
    "openpyxl>=3.1.0",
    "pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pymysql>=1.1.0",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.6.0",
    "types-cachetools>=5.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80"
filterwarnings = ["error"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
